--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2024", // Wersja JavaScript do której będzie kompilowany kod
     "module": "esnext", // System modułów
     "rootDir": "./", // Katalog główny projektu
-    "outDir": "dist", // Pliki .js będą generowane w katalogu 'dist'
+    "outDir": "./", // Pliki .js będą generowane w katalogu 'dist'
     "strict": true, // Włączenie ścisłego sprawdzania typów
     "isolatedModules": true // Wymuś traktowanie każdego pliku jako modułu
   },
