--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "api": "json-server --watch db.json --port 8080"
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "json-server": "^1.0.0-beta.3",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1"
   }
 }
