--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2024", // Wersja JavaScript do której będzie kompilowany kod
-    "module": "esnext", // System modułów
+    "target": "es2022", // Wersja JavaScript do której będzie kompilowany kod
+    "module": "nodenext", // System modułów
+    "moduleResolution": "nodenext", // Wymuś traktowanie każdego pliku jako modułu
     "rootDir": "./", // Katalog główny projektu
     "outDir": "./", // Pliki .js będą generowane w katalogu 'dist'
     "strict": true, // Włączenie ścisłego sprawdzania typów
-    "isolatedModules": true // Wymuś traktowanie każdego pliku jako modułu
+    "isolatedModules": true
   },
   "include": ["**/*.ts"], // Uwzględnij wszystkie pliki .ts w projekcie
   "exclude": ["node_modules"] // Wyklucz katalog node_modules
